<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/tv_net_title"
        android:textSize="25sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:text="@string/tv_net_protocol_label"/>
        <Spinner
            android:id="@+id/net_protocol"
            android:layout_width="100sp"
            android:layout_height="wrap_content" />
        <CheckBox
            android:id="@+id/net_starttls"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_net_starttls_label"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:text="@string/tv_net_hostname_label"/>
        <EditText
            android:id="@+id/net_hostname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tv_net_hostname_hint"
            android:inputType="text" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:text="@string/tv_net_port_label"/>
        <EditText
            android:id="@+id/net_port"
            android:layout_width="64sp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />
    </LinearLayout>

</LinearLayout>